# KafkaProject

./: .gitignore  Makefile  README.md  docker-compose.yml
src/app/: main.py
src/worker/: fixtures.json  info_consumer.py  main.py  stock_parser_consumer.py
system/kafka-docker/: .dockerignore  Dockerfile  kowl-config.yaml
system/kube/: app-deployment.yaml  env-configmap.yaml  kafka-deployment.yaml  kowl-claim0-persistentvolumeclaim.yaml  kowl-pod.yaml  kowl-service.yaml
system/python/: Dockerfile  entrypoint.sh  pyproject.toml
system/worker/: Dockerfile  pyproject.toml
